Temporarily remove interstitial translation
This will need to be revisited once we have the correct assets, so commenting out instead of removing outright

--- a/site/sass/components/_banner-interstitial.scss
+++ b/site/sass/components/_banner-interstitial.scss
@@ -71,7 +71,7 @@
       position: absolute;
       right: 0;
       top: 0;
-      transform: translate(generateScaling($scale-range, (60px -24px)), generateScaling($scale-range, (-20px -120px)));
+      // transform: translate(generateScaling($scale-range, (60px -24px)), generateScaling($scale-range, (-20px -120px)));
       width: 63%;
     }
   }
