--- a/site/_components/banner-interstitial.njk
+++ b/site/_components/banner-interstitial.njk
@@ -18,7 +18,6 @@
 #}-->
 {% from 'icon.njk' import icon %} {% macro bannerInterstitial(content, microcopy) %}
 <article class="banner-interstitial wrapper wrapper--full-bleed wrapper__contained {{'banner-interstitial--no-cta' if not content.cta}}">
-  {{content | dump}}
   <div class="banner-interstitial__inner {{'theme theme__' + content.theme.theme if content.theme}}">
     <div class="banner-interstitial__content">
       <div class="banner-interstitial__text">
@@ -28,7 +27,19 @@
         <a href="{{content.cta.url}}" class="cta cta--transparent banner-interstitial__cta"> {{content.cta.text}} </a>
       </div>
       <div class="banner-interstitial__image-wrapper">
-        <img src="{{image.src}}" alt="{{image.alt}}" class="banner-interstitial__image" />
+        {% if content.theme.background %} {% if content.theme.background.top %}
+        <picture>
+          <source media="(min-width: 720px)" srcset="{{content.theme.background.top}}" />
+          <img class="banner-interstitial--background-pattern" src="{{content.theme.background.bottom}}" alt="" />
+        </picture>
+        {% else %}
+        <img class="banner-interstitial--background-pattern" src="{{content.theme.background}}" alt="" />
+        {% endif %} {% else %}
+        <picture>
+          <source media="(min-width: 720px)" srcset="ix://landings/news/top/banner-{{tagSlug}}.svg" />
+          <img class="banner-interstitial--background-pattern" src="ix://landings/news/banner-{{tagSlug}}.svg" alt="" />
+        </picture>
+        {% endif %}
       </div>
     </div>
   </div>
