🆕 Update homepage content (#443)
* Migrate themes to stand-alone component

They're used a few places and instead of piling them into the 'hero' component, make them stand-alone to make it easier to find and change

* Make wrapper variables global

This allows reuse of wrapper spacing outside of the wrapper component

* Migrate interstital banner to use featured post

This makes it dynamic!

* Remove m100 specific styling and align 'inner' to wrapper

* Add Enterprise callout to homeage

Reuses routing cards, provides routing alts, moves education into combined section with enterprise

* Add max-width for subtitle

* Fix space typo

* Make card routing images round

* Use new Enterprise image

* Temporarily remove interstitial translation

This will need to be revisited once we have the correct assets, so commenting out instead of removing outright

* Add background images into interstitial

This may get updated once we get the correct assets

--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -29,14 +29,15 @@ hideNewsletter: true
   {% endif %}
 
   <!-- M100 Banner -->
-  <div id="home__banner">{{ bannerInterstitial(l10n.home.m100.content, l10n.home.m100.image, l10n.home.m100.cta, locale.code) }}</div>
+  <div id="home__banner">{{ bannerInterstitial(landingCollections.featured.post, l10n.microcopy) }}</div>
 
   <!-- Recent Articles -->
   {% if landingCollections.posts.length > 0 %}
   <div id="home__articles" class="wrapper wrapper--padding wrapper--padded">{{ itemGrid(l10n.home.posts.title, landingCollections.homePosts, l10n.home.posts.modifiers, l10n.locale.code) }}</div>
   {% endif %}
 
-  <div id="home__educators" class="wrapper wrapper--padded wrapper--padding">{{ fiftyFifty(l10n.home.educators.content, l10n.home.educators.cta, l10n.home.educators.images, l10n.locale.code, l10n.home.educators.modifiers) }}</div>
+  <!-- Ent and EDU -->
+  <div id="home__ent-edu" class="wrapper wrapper--full-bleed wrapper--padding wrapper--padded wrapper__contained wrapper__background">{{ itemGrid(l10n.home.business.title, l10n.home.business.items, l10n.home.business.modifiers, l10n.locale.code) }}</div>
 
   <!-- Developers -->
   <div id="home__developers" class="wrapper wrapper--padding wrapper--padded">{{ communityQuotes(l10n.home.developers.content, l10n.home.developers.quotes) }}</div>
