--- a/site/_layouts/_wrapper.njk
+++ b/site/_layouts/_wrapper.njk
@@ -21,7 +21,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans:400,500|Google+Sans+Text:400,400i,500,700,700i|Google+Sans+Mono:400,600&display=swap" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Product+Sans:400&display=swap&text=chromeOS" />
     <link rel="stylesheet" href="/sass/style.scss" />
     <script type="module" defer src="/js/main.js"></script>
     <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-168234575-1" type="module"></script>
@@ -33,7 +32,7 @@
       <div class="wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__background--dark">{% from "call-out.njk" import callOut %} {{ callOut(subscribe.content, subscribe.cta) }}</div>
       {% endif %}
     </main>
-    {% from 'footer.njk' import footer %}{{ footer(locale.code, site.languages, footerContent, true) }} {% include 'inline-svg.njk' %} {% from 'cookie-disclaimer.njk' import cookieDisclaimer %}{{ cookieDisclaimer(locale.code, cookies.title, cookies.content, cookies.ctas) }}
+    {% from 'footer.njk' import footer %}{{ footer(locale.code, site.languages, footerContent, true) }} {% from 'cookie-disclaimer.njk' import cookieDisclaimer %}{{ cookieDisclaimer(locale.code, cookies.title, cookies.content, cookies.ctas) }}
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script>
       window.dataLayer = window.dataLayer || [];
