--- a/site/sass/components/_logo.scss
+++ b/site/sass/components/_logo.scss
@@ -4,16 +4,20 @@
   align-items: center;
   display: flex;
 
-  &__ball {
+  svg {
     height: 2.5rem;
-    width: 2.5rem;
   }
 
-  &__text {
-    color: var(--grey-700);
-    font-family: Product Sans, Google Sans, Google Sans Text, sans-serif;
-    font-size: 1.375rem;
-    margin-left: 0.75rem;
-    text-decoration: none;
-  }
+  // &__ball {
+  //   height: 2.5rem;
+  //   width: 2.5rem;
+  // }
+
+  // &__text {
+  //   color: var(--grey-700);
+  //   font-family: Product Sans, Google Sans, Google Sans Text, sans-serif;
+  //   font-size: 1.375rem;
+  //   margin-left: 0.75rem;
+  //   text-decoration: none;
+  // }
 }
