--- a/site/sass/components/_banner-interstitial.scss
+++ b/site/sass/components/_banner-interstitial.scss
@@ -46,7 +46,7 @@
   &__eyebrow,
   &__title,
   &__copy {
-    color: var(--white);
+    color: inherit;
   }
 
   &__copy {
@@ -59,12 +59,16 @@
   }
 
   &__cta {
+    border-color: currentColor;
+    color: inherit;
     display: inline-flex;
     margin-top: 1.75rem;
   }
 
   &__image-wrapper {
+    height: 100%;
     max-width: pxRem(746px);
+    overflow: hidden;
     // Stretch image wrapper outside of the banner's wrapper.
     width: math.percentage(math.div(456px, 327px));
 
@@ -80,5 +84,11 @@
 
   &__image {
     object-fit: cover;
+  }
+
+  &--background-pattern {
+    float: right;
+    max-height: 100%;
+    width: auto;
   }
 }
