--- a/site/_components/banner-interstitial.njk
+++ b/site/_components/banner-interstitial.njk
@@ -27,16 +27,18 @@
         <a href="{{content.cta.url}}" class="cta cta--transparent banner-interstitial__cta"> {{content.cta.text}} </a>
       </div>
       <div class="banner-interstitial__image-wrapper">
-        {% if content.theme.background %} {% if content.theme.background.top %}
+        {% if content.media.image %}
+        <img class="banner-interstitial--image" src="{{content.media.image}}" alt="{{content.media.alt}}" />
+        {% endif %} {% if content.theme %} {% if content.theme.background %} {% if content.theme.background.top %}
         <picture>
           <source media="(min-width: 720px)" srcset="{{content.theme.background.top}}" />
           <img class="banner-interstitial--background-pattern" src="{{content.theme.background.bottom}}" alt="" />
         </picture>
         {% else %}
         <img class="banner-interstitial--background-pattern" src="{{content.theme.background}}" alt="" />
-        {% endif %} {% else %}
+        {% endif %} {% endif %} {% else %}
         <picture>
-          <source media="(min-width: 720px)" srcset="ix://landings/news/top/banner-{{content.normalizedTag}}.svg" />
+          <source media="(min-width: 871px)" srcset="ix://landings/news/top/banner-{{content.normalizedTag}}.svg" />
           <img class="banner-interstitial--background-pattern" src="ix://landings/news/banner-{{content.normalizedTag}}.svg" alt="" />
         </picture>
         {% endif %}
