--- a/site/sass/components/_banner-interstitial.scss
+++ b/site/sass/components/_banner-interstitial.scss
@@ -69,6 +69,7 @@
     height: 100%;
     max-width: pxRem(746px);
     overflow: hidden;
+    position: relative;
     // Stretch image wrapper outside of the banner's wrapper.
     width: math.percentage(math.div(456px, 327px));
 
@@ -86,9 +87,22 @@
     object-fit: cover;
   }
 
-  &--background-pattern {
+  &--image {
     float: right;
     max-height: 100%;
+    position: relative;
     width: auto;
+    z-index: 1;
+  }
+
+  &--background-pattern {
+    bottom: 0;
+    position: absolute;
+    right: 0;
+    z-index: 0;
+
+    @include mq($break-2-col) {
+      height: 100%;
+    }
   }
 }
