Add custom circles for theme

--- a/site/sass/components/_themes.scss
+++ b/site/sass/components/_themes.scss
@@ -29,6 +29,11 @@
     --hero-theme-background: var(--blue-850);
     --hero-theme-cta-background: transparent;
 
-    background-image: radial-gradient(circle farthest-corner at 97% 97%, var(--blue-200) 175px, transparent 175px), radial-gradient(circle farthest-corner at calc(97% + 53px) calc(97% + 53px), var(--blue-300) 250px, transparent 250px);
+    --center: 97%;
+    --offset: 74px;
+    --small: 25%;
+    --large: calc(25% + 5rem);
+
+    background-image: radial-gradient(circle farthest-corner at var(--center) var(--center), var(--blue-200) var(--small), transparent var(--small)), radial-gradient(circle farthest-corner at calc(var(--center) + var(--offset)) calc(var(--center) + var(--offset)), var(--blue-300) var(--large), transparent var(--large));
   }
 }
