--- a/site/_layouts/_wrapper.njk
+++ b/site/_layouts/_wrapper.njk
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans:400,500|Google+Sans+Text:400,400i,500,700,700i|Google+Sans+Mono:400,600&display=swap" />
     <link rel="stylesheet" href="/sass/style.scss" />
     <script type="module" defer src="/js/main.js"></script>
+    <script defer src="https://www.googletagmanager.com/gtm.js?id=GTM-P2W8H6G"></script>
   </head>
   <body id="body">
     {% from 'header.njk' import header %} {{ header(nav, search.placeholder, subscribe.cta, locale) }}
@@ -38,9 +39,11 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag('js', new Date());
-
-      gtag('config', 'UA-168234575-1');
+      gtag({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
     </script>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P2W8H6G" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
